@@ -952,8 +952,8 @@ let type_declarations ?(equality = false) ~loc env ~mark name
         (if abstr then (imp co1 co2 && imp cn1 cn2)
          else if opn || constrained ty then (co1 = co2 && cn1 = cn2)
          else true) &&
-        let (p1,n1,i1,j1) = get_lower v1 and (p2,n2,i2,j2) = get_lower v2 in
-        imp abstr (imp p2 p1 && imp n2 n1 && imp i2 i1 && imp j2 j1))
+        let (p1,n1,j1) = get_lower v1 and (p2,n2,j2) = get_lower v2 in
+        imp abstr (imp p2 p1 && imp n2 n1 && imp j2 j1))
       decl2.type_params (List.combine decl1.type_variance decl2.type_variance)
   then None else Some Variance
 
