@@ -80,6 +80,10 @@ Working version
 
 ### Internal/compiler-libs changes:
 
+- #11018: Clean up Types.Variance, adding a description of the lattice used,
+  and defining explicitly composition.
+  (Jacques Garrigue, review by Gabriel Scherer)
+
 - #11364: Allow `make -C testsuite promote` to take `TEST` and `LIST` variables
   (Antal Spector-Zabusky, review by Gabriel Scherer and David Allsopp)
 
